<resources>
    <string name="app_name">NumberRush</string>

    <!-- Text View -->
    <string name="click_number">Max Level</string>
    <string name="lv1">Level 1</string>
    <string name="lv2">Level 2</string>
    <string name="lv3">Level 3</string>
    <string name="lv4">Level 4</string>
    <string name="lv5">Level 5</string>
    <string name="lv6">Level 6</string>
    <string name="lv7">Level 7</string>
    <string name="lv8">Level 8</string>
    <string name="lv9">Level 9</string>
    <string name="lv10">Level 10</string>

    <!-- Button Text -->
    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>
    <string name="btn10">10</string>
</resources>