<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Level8Fragment">

    <TextView
        android:id="@+id/instructionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp"
        android:textSize="18sp"
        android:text="@string/lv8" />

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:rowCount="4"
        android:layout_centerInParent="true">

        <!-- Buttons from btn1 to btn10 -->

        <Button
            android:id="@+id/btn7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/btnColor"
            android:text="@string/btn7"
            app:strokeColor="@color/borderColor"
            app:strokeWidth="3dp" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:strokeWidth="3dp"
            app:strokeColor="@color/borderColor"
            android:backgroundTint="@color/btnColor"
            android:text="@string/btn3" />

        <Button
            android:id="@+id/btn5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/btnColor"
            android:text="@string/btn5"
            app:strokeColor="@color/borderColor"
            app:strokeWidth="3dp" />

        <Button
            android:id="@+id/btn9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/btnColor"
            android:text="@string/btn9"
            app:strokeColor="@color/borderColor"
            app:strokeWidth="3dp" />

        <Button
            android:id="@+id/btn4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/btnColor"
            android:text="@string/btn4"
            app:strokeColor="@color/borderColor"
            app:strokeWidth="3dp" />

        <Button
            android:id="@+id/btn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/btnColor"
            android:text="@string/btn1"
            app:strokeColor="@color/borderColor"
            app:strokeWidth="3dp" />

        <Button
            android:id="@+id/btn6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:strokeWidth="3dp"
            app:strokeColor="@color/borderColor"
            android:backgroundTint="@color/btnColor"
            android:text="@string/btn6" />

        <Button
            android:id="@+id/btn10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/btnColor"
            android:text="@string/btn10"
            app:strokeColor="@color/borderColor"
            app:strokeWidth="3dp" />

        <Button
            android:id="@+id/btn8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/btnColor"
            android:text="@string/btn8"
            app:strokeColor="@color/borderColor"
            app:strokeWidth="3dp" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/btnColor"
            android:text="@string/btn2"
            android:layout_column="1"
            android:layout_row="3"
            app:strokeColor="@color/borderColor"
            app:strokeWidth="3dp" />

    </GridLayout>
</RelativeLayout>